# emploers-base

./: README.md  config.py  pyproject.toml
data/: employers.txt
src/: main.py
src/classes/: db_class.py  hh_api_class.py
src/utils/: utils.py
